fixed h1 wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,17 @@ header {
 
 h1 {
     margin: 5% auto;
+    white-space: nowrap;
+}
+
+#suns-logo-container {
+    display: block;
+    height: 100px;
+    width: 100px;
+    flex-direction: column;
+    display: block;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 /* Navigation menu */
@@ -33,7 +44,7 @@ h1 {
 }
 
 #nav-menu li {
-    display: block;
+    display: flex;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -52,16 +63,6 @@ h1 {
 
 #nav-menu li a:hover {
     background-color: rgb(60, 8, 65);
-}
-
-#suns-logo-container {
-    display: block;
-    height: 100px;
-    width: 100px;
-    flex-direction: column;
-    display: block;
-    margin-left: auto;
-    margin-right: 0;
 }
 
 .team_updates {
